Make stylus's eraser button work on Mac

In order to make stylus's eraser button work on Mac, I set the pointer type to
blink::WebPointerProperties::PointerType::Eraser when we use the eraser button on the tablet.

BUG=685252

Review-Url: https://codereview.chromium.org/2739773004
Cr-Commit-Position: refs/heads/master@{#459166}

Former-commit-id: 45def6b3f18b803e4ea050a84ba8fecbc786b6df